<resources>
    <string name="app_name">Desafio TQI</string>
    <string name="description_logo">Logo da instituição financeira</string>
    <string name="description_arrow">Avançar</string>
    <string name="generic_error">Erro inesperado</string>
    <string name="timeout_error">Ops.. isso está demorando muito tempo. Tente novamente mais tarde.</string>
    <string name="no_internet">Sem conexão!</string>
    <string name="finantial_institution">Instituição Financeira</string>
    <string name="search_institution">Buscar instituição</string>
    <string name="form_header">Você selecionou esse banco para sua transferência:</string>
    <string name="bank">Banco:</string>
    <string name="code">Código:</string>
    <string name="next">Continuar</string>
    <string name="coming_soon">Em breve!</string>
    <string name="form">Formulário</string>
</resources>
