<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="bank"
            type="com.example.desafiotqi.model.Bank" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.FormActivity">

        <TextView
            android:id="@+id/txtHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/component_spacing"
            android:text="@string/form_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imgLogo"
            imageFromUrl="@{bank.image}"
            android:layout_width="@dimen/image_size_big"
            android:layout_height="@dimen/image_size_big"
            android:layout_marginStart="@dimen/component_spacing"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/ic_bank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtHeader" />

        <TextView
            android:id="@+id/labelBank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/component_spacing"
            android:layout_marginTop="@dimen/component_spacing"
            android:text="@string/bank"
            app:layout_constraintStart_toEndOf="@id/imgLogo"
            app:layout_constraintTop_toBottomOf="@id/txtHeader" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/component_spacing"
            android:layout_marginTop="@dimen/component_spacing"
            android:text="@{bank.name}"
            app:layout_constraintStart_toEndOf="@id/labelBank"
            app:layout_constraintTop_toBottomOf="@id/txtHeader"
            tools:text="Banco do Brasil" />

        <TextView
            android:id="@+id/labelCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/component_spacing"
            android:layout_marginTop="@dimen/component_spacing"
            android:text="@string/code"
            app:layout_constraintStart_toEndOf="@id/imgLogo"
            app:layout_constraintTop_toBottomOf="@id/labelBank" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/component_spacing"
            android:layout_marginTop="@dimen/component_spacing"
            android:text="@{bank.code}"
            app:layout_constraintStart_toEndOf="@id/labelCode"
            app:layout_constraintTop_toBottomOf="@id/labelBank"
            tools:text="123" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/component_spacing"
            android:layout_marginTop="@dimen/component_spacing"
            android:layout_marginEnd="@dimen/component_spacing"
            android:onClick="@{clickListener}"
            android:text="@string/next"
            app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
